# platformer_game

./: CMakeLists.txt
engine/: SimulationManager.cpp  SimulationManager.h  State.cpp  State.h  Types.h
engine/abstracts/: AbstractManager.h
engine/graphics/: RenderManager.cpp  RenderManager.h
engine/graphics/abstracts/: GameObject.h  GameScene.h
engine/graphics/objects/: Rectangle.hpp
engine/graphics/utils/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
engine/physics/: Box2DCommons.h  Commons.h  Math.h  PhysicsManager.cpp  PhysicsManager.h
engine/physics/arbiter/: Arbiter.cpp  Arbiter.h  ContactPoint.h
engine/physics/rigid_body/: RigidBody2D.cpp  RigidBody2D.h
engine/physics/shapes/: Box2D.cpp  Box2D.h
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
glm/ext/: scalar_ulp.hpp
src/: main.cpp
src/scenes/: MainScene.cpp  MainScene.h
stb_image/: stb_image.h
